tests/samples/compile_errors/jump_target/undefined_resume.bas
Attribute VB_Name = "UndefinedResume"
Sub TestResume()
    On Error GoTo Handler
    Exit Sub
Handler:
    Resume RetryStep
End Sub
